--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             </div>
             <div class="col-md-4">
                 <div class="product-card">
-                    <img src="https://mindgeek.zendesk.com/attachments/token/A5UJSlyrCtSCMMJdO85OUOztM/?name=msedge_0u6Cjv7q1p.png" alt="Adobe Media Encoder">
+                    <img src="https://mindgeek.zendesk.com/attachments/token/qt9RcbP0W1oPgKwa3JUktmcwS/?name=msedge_WI8wCVk14F.png" alt="Adobe Media Encoder">
                     <h5>Adobe Media Encoder 2019</h5>
                     <p>$2.50 USD</p>
                     <button class="btn btn-primary add-to-cart" data-name="Media Encoder" data-price="2.5">Add to Cart</button>
