--- a/index.html
+++ b/index.html
@@ -18,21 +18,24 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <style>
         body {
-            background-color: #1a1a1a;
-            color: #ffcc00;
+            background-color: #050505;
+            color: #0ff; 
             font-family: 'Courier New', Courier, monospace;
-            background-image: url('https://mindgeek.zendesk.com/attachments/token/trXNyM4miFnmaxHlHTYTDnPg9/?name=designtnt-textures-cracked-concrete-set-7-6.JPG');
+            background-image: url('https://wallpaperaccess.com/full/384954.jpg'); 
+            background-size: cover;
+            background-position: center;
+            background-attachment: fixed;
         }
         .navbar {
-            background: linear-gradient(90deg, #3e3e3e, #222222);
-            border-bottom: 3px solid #ffcc00;
+            background: linear-gradient(90deg, #111, #222);
+            border-bottom: 3px solid #0ff;
         }
         .product-card {
-            background-color: #2d2d2d;
+            background-color: rgba(20, 20, 20, 0.9);
             border: 2px solid #C90076;
             border-radius: 10px;
             padding: 20px;
-            box-shadow: 0px 0px 10px #444444;
+            box-shadow: 0px 0px 10px #C90076;
             text-align: center;
         }
         .product-card img {
@@ -42,21 +45,21 @@
             margin-bottom: 10px;
         }
         .btn-warning {
-            background-color: #ff9900;
+            background-color: #ff00ff;
             border: none;
         }
         .btn-warning:hover {
-            background-color: #cc7700;
+            background-color: #cc00cc;
         }
         .floating-cart {
             position: fixed;
             bottom: 20px;
             right: 20px;
-            background: rgba(45, 45, 45, 0.9);
-            color: #ffcc00;
+            background: rgba(15, 15, 15, 0.9);
+            color: #0ff;
             padding: 15px;
             border-radius: 10px;
-            box-shadow: 0px 0px 10px #ffcc00;
+            box-shadow: 0px 0px 10px #0ff;
             display: none;
         }
     </style>
@@ -64,7 +67,7 @@
 <body>
     <nav class="navbar navbar-dark">
         <div class="container">
-            <a class="navbar-brand" href="#">🧑‍🎨 Adobe 🧑‍🎨</a>
+            <a class="navbar-brand" href="#">🧑‍🎨 ByteTard Adobe 🧑‍🎨</a>
             <button class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#cartModal">Check Out</button>
         </div>
     </nav>
@@ -81,43 +84,10 @@
             </div>
             <div class="col-md-4">
                 <div class="product-card">
-                    <img src="https://mindgeek.zendesk.com/attachments/token/sqqnHrVXqhZVB9g5cWg359aBZ/?name=msedge_0GOlrI1dM6.png" alt="Adobe Dreamweaver">
-                    <h5>Adobe Dreamweaver 2019</h5>
-                    <p>$10.00 USD</p>
-                    <button class="btn btn-primary add-to-cart" data-name="Dreamweaver" data-price="10">Add to Cart</button>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="product-card">
-                    <img src="https://mindgeek.zendesk.com/attachments/token/HPfgUAw4BKpxVqRLcRg3LyqbF/?name=msedge_AInhkV0GIi.png" alt="Adobe Illustrator">
-                    <h5>Adobe Illustrator 2019</h5>
-                    <p>$10.00 USD</p>
-                    <button class="btn btn-primary add-to-cart" data-name="Illustrator" data-price="10">Add to Cart</button>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="product-card">
-                    <img src="https://mindgeek.zendesk.com/attachments/token/qt9RcbP0W1oPgKwa3JUktmcwS/?name=msedge_WI8wCVk14F.png" alt="Adobe Media Encoder">
-                    <h5>Adobe Media Encoder 2019</h5>
-                    <p>$2.50 USD</p>
-                    <button class="btn btn-primary add-to-cart" data-name="Media Encoder" data-price="2.5">Add to Cart</button>
-                </div>
-            </div>
-           <div class="col-md-4">
-                <div class="product-card">
-                    <img src="https://mindgeek.zendesk.com/attachments/token/LsA78YVE1JBdmTIIODJEQXawY/?name=msedge_X5h2dYN5rF.png" alt="PhotoShop">
+                    <img src="https://mindgeek.zendesk.com/attachments/token/LsA78YVE1JBdmTIIODJEQXawY/?name=msedge_X5h2dYN5rF.png" alt="Adobe Photoshop">
                     <h5>Adobe Photoshop 2019</h5>
-                    <p>$10 USD</p>
+                    <p>$10.00 USD</p>
                     <button class="btn btn-primary add-to-cart" data-name="Photoshop" data-price="10">Add to Cart</button>
-                </div>
-            </div>
-          
-           <div class="col-md-4">
-                <div class="product-card">
-                    <img src="https://mindgeek.zendesk.com/attachments/token/IxVLIOOL1xwtBMiGCziMzodko/?name=msedge_DguciDhO5G.png" alt="Adobe Premiere Pro">
-                    <h5>Adobe Premiere Pro 2019</h5>
-                    <p>$10 USD</p>
-                    <button class="btn btn-primary add-to-cart" data-name="Adobe Premiere Pro" data-price="10">Add to Cart</button>
                 </div>
             </div>
         </div>
@@ -178,10 +148,12 @@
         }
 
         $('#apply-coupon').click(function() {
-            let couponCode = $('#coupon').val();
+            let couponCode = $('#coupon').val().trim().toLowerCase();
             if (couponCode === 'tiktok' && !discountApplied) {
                 discountApplied = true;
                 updateCart();
+            } else {
+                alert('Invalid or already applied coupon!');
             }
         });
 
@@ -193,7 +165,9 @@
 
         $('#checkout').click(function() {
             let total = $('#cart-total').text();
-            window.location.href = `https://cash.app/$bytetard?amount=${total}`;
+            let memo = cart.map(item => `${item.name} ($${item.price})`).join(', ');
+            let encodedMemo = encodeURIComponent(memo);
+            window.location.href = `https://cash.app/$bytetard?amount=${total}&note=${encodedMemo}`;
         });
     </script>
 </body>
