--- a/index.html
+++ b/index.html
@@ -16,15 +16,70 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <style>
+        body {
+            background-color: #000;
+            color: #0ff;
+            font-family: 'Courier New', Courier, monospace;
+            background-image: url('https://wallpaperaccess.com/full/384954.jpg');
+            background-size: cover;
+            background-position: center;
+            background-attachment: fixed;
+        }
+        .navbar {
+            background: linear-gradient(90deg, #111, #333);
+            border-bottom: 3px solid #0ff;
+        }
+        .product-card {
+            background-color: rgba(20, 20, 20, 0.9);
+            border: 2px solid #C90076;
+            border-radius: 10px;
+            padding: 20px;
+            box-shadow: 0px 0px 15px #C90076;
+            text-align: center;
+            color: #fff;
+        }
+        .product-card img {
+            width: 100%;
+            height: auto;
+            border-radius: 5px;
+            margin-bottom: 10px;
+        }
+        .btn-warning {
+            background-color: #ff00ff;
+            border: none;
+        }
+        .btn-warning:hover {
+            background-color: #cc00cc;
+        }
+        .floating-cart {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            background: rgba(15, 15, 15, 0.9);
+            color: #0ff;
+            padding: 15px;
+            border-radius: 10px;
+            box-shadow: 0px 0px 10px #0ff;
+            display: none;
+        }
+    </style>
 </head>
 <body>
+    <nav class="navbar navbar-dark">
+        <div class="container">
+            <a class="navbar-brand" href="#">🧑‍🎨 ByteTard Adobe 🧑‍🎨</a>
+            <button class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#cartModal">Check Out</button>
+        </div>
+    </nav>
+
     <div class="container mt-4">
         <div class="row" id="product-list">
             <div class="col-md-4">
                 <div class="product-card">
                     <img src="https://mindgeek.zendesk.com/attachments/token/LrxGAz3maeRgpDXHtdsvRjxeD/?name=msedge_3FiaWVITUn.png" alt="After Effects">
                     <h5>Adobe After Effects 2019</h5>
-                    <p>SKU: <span class="sku">24-12</span></p>
+                    <p>SKU: 24-12</p>
                     <p>$10.00 USD</p>
                     <button class="btn btn-primary add-to-cart" data-name="After Effects" data-price="10" data-sku="24-12">Add to Cart</button>
                 </div>
@@ -33,13 +88,15 @@
                 <div class="product-card">
                     <img src="https://mindgeek.zendesk.com/attachments/token/LsA78YVE1JBdmTIIODJEQXawY/?name=msedge_X5h2dYN5rF.png" alt="Adobe Photoshop">
                     <h5>Adobe Photoshop 2019</h5>
-                    <p>SKU: <span class="sku">24-34</span></p>
+                    <p>SKU: 24-34</p>
                     <p>$10.00 USD</p>
                     <button class="btn btn-primary add-to-cart" data-name="Photoshop" data-price="10" data-sku="24-34">Add to Cart</button>
                 </div>
             </div>
         </div>
     </div>
+
+    <div class="floating-cart" id="floating-cart">Total: $<span id="floating-cart-total">0</span></div>
 
     <div class="modal fade" id="cartModal" tabindex="-1">
         <div class="modal-dialog">
@@ -71,20 +128,25 @@
         function updateCart() {
             let cartList = $('#cart-items');
             let cartTotal = $('#cart-total');
+            let floatingCartTotal = $('#floating-cart-total');
+            let floatingCart = $('#floating-cart');
             cartList.empty();
             let total = 0;
 
             cart.forEach(item => {
-                let li = $('<li>').text(`${item.name} - $${item.price} (SKU: ${item.sku})`).addClass('list-group-item');
+                let li = $('<li>').text(`${item.name} (SKU: ${item.sku}) - $${item.price}`).addClass('list-group-item');
                 cartList.append(li);
                 total += item.price;
             });
+
             cartTotal.text(total.toFixed(2));
+            floatingCartTotal.text(total.toFixed(2));
+            floatingCart.toggle(cart.length > 0);
         }
 
         $('#checkout').click(function() {
             let total = $('#cart-total').text();
-            let memo = cart.map(item => `${item.name} (SKU: ${item.sku})`).join(', ');
+            let memo = cart.map(item => `${item.name} (SKU: ${item.sku}) - $${item.price}`).join(', ');
             let encodedMemo = encodeURIComponent(memo);
             window.open(`https://cash.app/$bytetard?amount=${total}&note=${encodedMemo}`, '_blank');
         });
