--- a/index.html
+++ b/index.html
@@ -79,18 +79,54 @@
                 <div class="product-card">
                     <img src="https://mindgeek.zendesk.com/attachments/token/LrxGAz3maeRgpDXHtdsvRjxeD/?name=msedge_3FiaWVITUn.png" alt="After Effects">
                     <h5>Adobe After Effects 2019</h5>
-                    <p>SKU: 24-12</p>
+                    <p>SKU: 24-11</p>
                     <p>$10.00 USD</p>
-                    <button class="btn btn-primary add-to-cart" data-name="After Effects" data-price="10" data-sku="24-12">Add to Cart</button>
+                    <button class="btn btn-primary add-to-cart" data-name="After Effects" data-price="10" data-sku="24-11">Add to Cart</button>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="product-card">
                     <img src="https://mindgeek.zendesk.com/attachments/token/LsA78YVE1JBdmTIIODJEQXawY/?name=msedge_X5h2dYN5rF.png" alt="Adobe Photoshop">
                     <h5>Adobe Photoshop 2019</h5>
-                    <p>SKU: 24-34</p>
+                    <p>SKU: 24-12</p>
                     <p>$10.00 USD</p>
-                    <button class="btn btn-primary add-to-cart" data-name="Photoshop" data-price="10" data-sku="24-34">Add to Cart</button>
+                    <button class="btn btn-primary add-to-cart" data-name="Photoshop" data-price="10" data-sku="24-12">Add to Cart</button>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="product-card">
+                    <img src="https://mindgeek.zendesk.com/attachments/token/sqqnHrVXqhZVB9g5cWg359aBZ/?name=msedge_0GOlrI1dM6.png" alt="Adobe Photoshop">
+                    <h5>Adobe Dreamweaver 2019</h5>
+                    <p>SKU: 24-13</p>
+                    <p>$10.00 USD</p>
+                    <button class="btn btn-primary add-to-cart" data-name="Dreamweaver" data-price="10" data-sku="24-13">Add to Cart</button>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="product-card">
+                    <img src="https://mindgeek.zendesk.com/attachments/token/HPfgUAw4BKpxVqRLcRg3LyqbF/?name=msedge_AInhkV0GIi.png" alt="Illustrator">
+                    <h5>Adobe Illustrator 2019</h5>
+                    <p>SKU: 24-14</p>
+                    <p>$10.00 USD</p>
+                    <button class="btn btn-primary add-to-cart" data-name="Illustrator" data-price="10" data-sku="24-14">Add to Cart</button>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="product-card">
+                    <img src="https://mindgeek.zendesk.com/attachments/token/qt9RcbP0W1oPgKwa3JUktmcwS/?name=msedge_WI8wCVk14F.png" alt="Media Encoder">
+                    <h5>Adobe Media Encoder 2019</h5>
+                    <p>SKU: 24-15</p>
+                    <p>$10.00 USD</p>
+                    <button class="btn btn-primary add-to-cart" data-name="Media Encoder" data-price="10" data-sku="24-15">Add to Cart</button>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="product-card">
+                    <img src="https://mindgeek.zendesk.com/attachments/token/IxVLIOOL1xwtBMiGCziMzodko/?name=msedge_DguciDhO5G.png" alt="Premiere Pro">
+                    <h5>Adobe Premiere Pro 2019</h5>
+                    <p>SKU: 24-16</p>
+                    <p>$10.00 USD</p>
+                    <button class="btn btn-primary add-to-cart" data-name="Premiere Pro" data-price="10" data-sku="24-16">Add to Cart</button>
                 </div>
             </div>
         </div>
