--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
                         <li class="nav-item search-bar">
                              <input type="text" id="search-bar" placeholder="Search my shop" onkeydown="searchRedirect(event)">
                             <button type="submit"><i class="fa fa-search"></i></button>
+                              <button class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#cartModal">Check Out</button>
                         </li>
                     </ul>
                 </div>
