--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
 
         $('#checkout').click(function() {
             let total = $('#cart-total').text();
-            window.location.href = `https://cash.app/$ballexd?amount=${total}`;
+            window.location.href = `https://cash.app/$bytetard?amount=${total}`;
         });
     </script>
 </body>
