--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
                              <input type="text" id="search-bar" placeholder="Search my shop" onkeydown="searchRedirect(event)">
                             <button type="submit"><i class="fa fa-search"></i></button>
                               <button class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#cartModal">Check Out</button>
+				<li class="nav-item premium"><a data-bs-toggle="modal" data-bs-target="#cartModal"><b>Check Out</b></a></li>
                         </li>
                     </ul>
                 </div>
