--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         }
     </style>
     <script>
-        let titleText = "<--- Start Bootstrap --->";
+        let titleText = "<---! ADOBE !--->";
         let position = 0;
         function scrollTitle() {
             document.title = titleText.substring(position) + titleText.substring(0, position);
@@ -160,7 +160,7 @@
         </div>
         <div id="brdmain">
             <div id="msg" class="block">
-                <h2><span>Start Bootstrap</span></h2>
+                <h1><span>Adobe Products</span></h1>
                 <div class="box">
                     <div class="inbox">
 						
