--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         }
     </style>
     <script>
-        let titleText = "<---! ADOBE !--->";
+        let titleText = "----! ADOBE -!---";
         let position = 0;
         function scrollTitle() {
             document.title = titleText.substring(position) + titleText.substring(0, position);
