--- a/index.html
+++ b/index.html
@@ -138,7 +138,6 @@
                         <li class="nav-item search-bar">
                              <input type="text" id="search-bar" placeholder="Search my shop" onkeydown="searchRedirect(event)">
                             <button type="submit"><i class="fa fa-search"></i></button>
-                              <button class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#cartModal">Check Out</button>
 				<li class="nav-item premium"><a data-bs-toggle="modal" data-bs-target="#cartModal"><b>Check Out</b></a></li>
                         </li>
                     </ul>
@@ -153,7 +152,7 @@
                 </div>
                 <div id="brdwelcome" class="inbox">
                     <p class="ilk">Logged in as <b>User</b></p>
-                    <p class="ikinci"><b>HTML Free classes</b> Starting 03/01/2025 [<a href="/404">See next lessons</a>]</p>
+                    <p class="ikinci"><b>HTML Free classes</b> Starting 03/01/2025 [<a href="/gs">See next lessons</a>]</p>
                     <p><a href="https://t.me/ByteTardz">Join us on Telegram</a> • <a href="https://discord.gg/eQfDx6QP">Join us on discord</a></p>
                 </div>
             </div>
