--- a/index.html
+++ b/index.html
@@ -129,9 +129,9 @@
                 <div id="brdmenu" class="inbox">
                     <ul>
                         <li id="nav-notifications"><span class="fake-link" id="notifications"><i class="fa fa-lg fa-bell" id="notifications-badge" data-after-content="0"></i></span></li>
-                        <li class="nav-item"><a href="/main">Main</a></li>
+                        <li class="nav-item"><a href="/gs">Main</a></li>
                         <li class="nav-item"><a href="/products">Products</a></li>
-                        <li class="nav-item"><a href="/html">HTML</a></li>
+                        <li class="nav-item"><a href="/contact">Contact</a></li>
                         <li class="nav-item"><a href="/adobe">Adobe</a></li>
                         <li class="nav-item premium"><a href="https://www.tiktok.com/@scaringxd"><b>TikTok</b></a></li>
                         <li class="nav-item"><a href="/whitecocao">WhiteCocao</a></li>
@@ -151,8 +151,8 @@
                     </div>
                 </div>
                 <div id="brdwelcome" class="inbox">
-                    <p class="ilk">Logged in as <b>User</b></p>
-                    <p class="ikinci"><b>HTML Free classes</b> Starting 03/01/2025 [<a href="/gs">See next lessons</a>]</p>
+                    <p class="ilk">Logged in as <b>Guest</b></p>
+                    <p class="ikinci"><b>HTML Free Video Lessons</b> Starting 03/01/2025 [<a href="/gs">See current lessons</a>]</p>
                     <p><a href="https://t.me/ByteTardz">Join us on Telegram</a> • <a href="https://discord.gg/eQfDx6QP">Join us on discord</a></p>
                 </div>
             </div>
