--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                     <h5>Adobe Photoshop 2019</h5>
                     <p>SKU: 24-12</p>
                     <p>$10.00 USD</p>
-                    <button class="btn btn-primary add-to-cart" data-name="Photoshop" data-price="10" data-sku="24-12">Add to Cart</button>
+                    <a href="https://bytetard.bgng.io/product/ps"><button class="btn btn-primary add-to-cart">Add to Cart</button></a>
                 </div>
             </div>
             <div class="col-md-4">
