--- a/index.html
+++ b/index.html
@@ -250,8 +250,7 @@
         <div id="brdfooter" class="block">
             <div class="box">
                 <div class="inbox">
-                    <!--p>ByteTard 2025</p-->
-			<h1><a href="/gs">Byte<span>Tard</span></a></h1>
+                    <p>ByteTard 2025</p>
                     <ul>
                         <li><a href="/tos">Terms and Conditions / Privacy Policy</a></li>
                     </ul>
