--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                     <h5>Adobe Illustrator 2019</h5>
                     <p>SKU: 24-14</p>
                     <p>$10.00 USD</p>
-                    <button class="btn btn-primary add-to-cart" data-name="Illustrator" data-price="10" data-sku="24-14">Add to Cart</button>
+                    <a href="https://bytetard.bgng.io/product/ai"><button class="btn btn-primary">Add to Cart</button></a>
                 </div>
             </div>
             <div class="col-md-4">
