--- a/index.html
+++ b/index.html
@@ -221,29 +221,17 @@
                     <button class="btn btn-primary add-to-cart" data-name="Premiere Pro" data-price="10" data-sku="24-16">Add to Cart</button>
                 </div>
             </div>
-        </div>
-    </div>
-
-    <div class="floating-cart" id="floating-cart">Total: $<span id="floating-cart-total">0</span></div>
-
-    <div class="modal fade" id="cartModal" tabindex="-1">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title">Check Out</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-                </div>
-                <div class="modal-body">
-                    <ul id="cart-items" class="list-group"></ul>
-                    <p class="mt-3">USD: $<span id="cart-total">0</span></p>
-                    <button class="btn btn-primary mt-2" id="checkout">Pay with Cash App</button>
+							<div class="col-md-4">
+                <div class="product-card">
+                    <img src="/adobe/adobe.png" alt="Adobe Bundle">
+                    <h5>Adobe Bundle</h5>
+                    <p>SKU: 24-69</p>
+                    <p>$55.00 USD</p>
+                    <a href="https://commerce.coinbase.com/checkout/b8e8a98b-7de6-4dec-9a1c-04dd18850e23"<button class="btn btn-primary">Add to Cart</button></a>
                 </div>
             </div>
         </div>
     </div>
-                        
-              
-                    </div>
                 </div>
             </div>
         </div>
