--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 						
 						<div class="row" id="product-list">
 						<h1><span>Adobe Products</span></h1>	
-            <div class="col-md-4">
+            <!--div class="col-md-4">
 		    
                 <div class="product-card">
                     <img src="https://mindgeek.zendesk.com/attachments/token/LrxGAz3maeRgpDXHtdsvRjxeD/?name=msedge_3FiaWVITUn.png" alt="After Effects">
@@ -175,7 +175,7 @@
                     <p>$10.00 USD</p>
                     <button class="btn btn-primary add-to-cart" data-name="After Effects" data-price="10" data-sku="24-11">Add to Cart</button>
                 </div>
-            </div>
+						</div-->
             <div class="col-md-4">
                 <div class="product-card">
                     <img src="https://mindgeek.zendesk.com/attachments/token/LsA78YVE1JBdmTIIODJEQXawY/?name=msedge_X5h2dYN5rF.png" alt="Adobe Photoshop">
@@ -185,7 +185,7 @@
                     <a href="https://bytetard.bgng.io/product/ps"><button class="btn btn-primary add-to-cart">Add to Cart</button></a>
                 </div>
             </div>
-            <div class="col-md-4">
+            <!--div class="col-md-4">
                 <div class="product-card">
                     <img src="https://mindgeek.zendesk.com/attachments/token/sqqnHrVXqhZVB9g5cWg359aBZ/?name=msedge_0GOlrI1dM6.png" alt="Adobe Photoshop">
                     <h5>Adobe Dreamweaver 2019</h5>
@@ -193,7 +193,7 @@
                     <p>$10.00 USD</p>
                     <button class="btn btn-primary add-to-cart" data-name="Dreamweaver" data-price="10" data-sku="24-13">Add to Cart</button>
                 </div>
-            </div>
+						</div-->
             <div class="col-md-4">
                 <div class="product-card">
                     <img src="https://mindgeek.zendesk.com/attachments/token/HPfgUAw4BKpxVqRLcRg3LyqbF/?name=msedge_AInhkV0GIi.png" alt="Illustrator">
@@ -203,7 +203,7 @@
                     <a href="https://bytetard.bgng.io/product/ai"><button class="btn btn-primary">Add to Cart</button></a>
                 </div>
             </div>
-            <div class="col-md-4">
+            <!--div class="col-md-4">
                 <div class="product-card">
                     <img src="https://mindgeek.zendesk.com/attachments/token/qt9RcbP0W1oPgKwa3JUktmcwS/?name=msedge_WI8wCVk14F.png" alt="Media Encoder">
                     <h5>Adobe Media Encoder 2019</h5>
@@ -220,14 +220,14 @@
                     <p>$10.00 USD</p>
                     <button class="btn btn-primary add-to-cart" data-name="Premiere Pro" data-price="10" data-sku="24-16">Add to Cart</button>
                 </div>
-            </div>
+						</div-->
 							<div class="col-md-4">
                 <div class="product-card">
                     <img src="/adobe/adobe.png" alt="Adobe Bundle">
                     <h5>Adobe Bundle</h5>
                     <p>SKU: 24-69</p>
                     <p>$55.00 USD</p>
-                    <a href="https://commerce.coinbase.com/checkout/b8e8a98b-7de6-4dec-9a1c-04dd18850e23"<button class="btn btn-primary">Add to Cart</button></a>
+                    <a href="https://commerce.coinbase.com/checkout/b8e8a98b-7de6-4dec-9a1c-04dd18850e23"<button class="btn btn-primary add-to-cart">Add to Cart</button></a>
                 </div>
             </div>
         </div>
