--- a/index.html
+++ b/index.html
@@ -227,7 +227,8 @@
                     <h5>Adobe Bundle</h5>
                     <p>SKU: 24-69</p>
                     <p>$55.00 USD</p>
-                    <a href="https://commerce.coinbase.com/checkout/b8e8a98b-7de6-4dec-9a1c-04dd18850e23"<button class="btn btn-primary add-to-cart">Add to Cart</button></a>
+                    <a href="https://checkout.hoodpay.io/0987e8a3-3756-4c57-85ca-51278ba9a37d"<button class="btn btn-primary add-to-cart">Add to Cart</button></a>
+			 <button class="btn btn-primary add-to-cart" href="https://checkout.hoodpay.io/0987e8a3-3756-4c57-85ca-51278ba9a37d">Add to Cart</button>
                 </div>
             </div>
         </div>
