--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                     <button class="btn btn-primary add-to-cart" data-name="After Effects" data-price="10" data-sku="24-11">Add to Cart</button>
                 </div>
 						</div-->
-            <!--div class="col-md-4">
+            <div class="col-md-4">
                 <div class="product-card">
                     <img src="https://mindgeek.zendesk.com/attachments/token/LsA78YVE1JBdmTIIODJEQXawY/?name=msedge_X5h2dYN5rF.png" alt="Adobe Photoshop">
                     <h5>Adobe Photoshop 2019</h5>
