--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                     <button class="btn btn-primary add-to-cart" data-name="After Effects" data-price="10" data-sku="24-11">Add to Cart</button>
                 </div>
 						</div-->
-            <div class="col-md-4">
+            <!--div class="col-md-4">
                 <div class="product-card">
                     <img src="https://mindgeek.zendesk.com/attachments/token/LsA78YVE1JBdmTIIODJEQXawY/?name=msedge_X5h2dYN5rF.png" alt="Adobe Photoshop">
                     <h5>Adobe Photoshop 2019</h5>
@@ -227,7 +227,7 @@
                     <h5>Adobe Bundle</h5>
                     <p>SKU: 24-69</p>
                     <p>$55.00 USD</p>
-                    <a href="https://checkout.hoodpay.io/0987e8a3-3756-4c57-85ca-51278ba9a37d"<button class="btn btn-primary add-to-cart">Check Out</button></a>
+                    <a href="https://checkout.hoodpay.io/7bfca481-5432-451f-bf51-797846e84097"<button class="btn btn-primary add-to-cart">Check Out</button></a>
                 </div>
             </div>
         </div>
